fixed alignment on form inputs width 100%

--- a/src/components/dropdowns/ListDropDown.css
+++ b/src/components/dropdowns/ListDropDown.css
@@ -1,7 +1,7 @@
 
 .list-dropdown-list { 
-    width: 94%;
-    right: 1.0rem;
+    width: 100%;
+    right: 0;
     top: 3.7rem;
     position: absolute;
     list-style-type: none;
@@ -31,13 +31,13 @@
 
 input.input-dropdown {
     cursor: pointer;
-    margin: 0 1rem;
+    margin: 0;
 }
 
 .list-dropdown-wrapper {
     position: relative;
     display: inline-block;
-    width: auto;
+    width: 100%;
 }
 
 .list-dropdown-item::before {
