--- a/src/components/styles/global/globalForm.css
+++ b/src/components/styles/global/globalForm.css
@@ -1,5 +1,5 @@
 form {
-    max-width: 25rem;
+    width: auto;
     display: block;
     margin: 5rem auto;
     -moz-appearance: none;
@@ -7,7 +7,7 @@ form {
 }
 
 form h1 {    
-    width: 24rem;
+    width: auto;
     text-align: center;
     font-size: 2.5rem;
     display: block; 
@@ -23,9 +23,9 @@ a.link-button {
     -moz-appearance: none; /* Safari iphone */
     -webkit-appearance: none; /* Mozilla */
     width: 100%;
-    display: inline-block;    
+    display: block;    
     padding: 1rem;
-    margin: 1rem;
+    margin: 1rem 0;
     border-radius: 0; /* Safari iphone */
     border: none;
     outline: none;
