--- a/src/components/views/account/AccountView.css
+++ b/src/components/views/account/AccountView.css
@@ -1,4 +1,4 @@
-.account-view form, 
+/* .account-view form, 
 .account-view h1 {
     width: auto;
     min-width: 28rem;
@@ -13,4 +13,4 @@
     width: inherit;
     min-width: 28rem;
     display: block;
-}
+} */
